# Turbo-Print

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  CHANGELOG.ru.md  README.en.md  README.md  README.ru.md  __init__.py  __main__.py  config_loader.py  main.py  pyproject.toml  pyptoject.toml  requirements.txt
.github/workflows/: ci.yml
data/: __init__.py
src/: __init__.py  _turbo_print.py  _types.py  compression.py  exceptions.py  filters.py  formatters.py  handlers.py  inner_middlewares.py  localization.py  metrics.py  migration.py  my_types.py  outer_middlewares.py  realtime.py  turbo_print.py  types.py
tests/: ___init__.py  __init__.py  test__filters.py  test__formatters.py  test__handlers.py  test__main.py  test__my_types.py  test__turbo_print.py
